tests/paczka1/fuzzy1/68362908.err
Error in line 2: Z2aLAtZg3KE S936 34,7
Error in line 36: MF6K S665 95,5
